Fix option list alignemtn

--- a/src/shared/components/option-list.css
+++ b/src/shared/components/option-list.css
@@ -15,6 +15,7 @@
 		display: flex;
 		gap: var(--v-space-xs);
 		align-items: flex-start;
+		justify-content: flex-start;
 		padding-inline: calc(var(--v-spacing) + var(--v-inner-radius));
 		text-align: left;
 		width: 100%;
